--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "e-icon-picker": "^1.0.7",
     "element-ui": "^2.8.2",
     "lz-string": "^1.4.4",
     "mavon-editor": "^2.6.17",
@@ -25,6 +26,9 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
     "vue-template-compiler": "^2.5.21"
   }
 }
