--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.8.2",
     "lz-string": "^1.4.4",
     "mavon-editor": "^2.6.17",
+    "moment": "^2.28.0",
     "vue": "^2.6.10",
     "vue-cropperjs": "^3.0.0",
     "vue-i18n": "^8.10.0",
